<resources>
    <string name="app_name">捡宝</string>

    <string name="phone_hint">请输入手机号码</string>
    <string name="code_hint">请输入验证码</string>
    <string name="obtain_code">获取验证码</string>
    <string name="set_pass">请输入6-12位字母和数字组合的密码</string>
    <string name="agree">同意</string>
    <string name="submit_register">提交注册</string>
    <string name="register_enjoy_more">注册后将享受更多优质服务</string>

    <string name="next_step">下一步</string>
    <string name="new_pass">请输入新密码</string>
    <string name="new_pass_sure">确认新密码</string>

    <string name="sure">确认</string>
    <string name="cancle">取消</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
