<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:autofit="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_login_back"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="13dp"
            android:src="@mipmap/cha" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="手机号注册"
            android:textColor="@color/title_color"
            android:textSize="18sp" />

    </com.zhy.autolayout.AutoRelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line" />

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11.1"
        android:background="@color/background_tint"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/background_login_with_frame"
            android:orientation="vertical">

            <com.zhy.autolayout.AutoRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="6dp">


                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center_vertical|left"
                    android:hint="@string/phone_hint"
                    android:inputType="number"
                    android:paddingLeft="6dp"
                    android:textColor="@color/text"
                    android:textColorHint="@color/text_gray"
                    android:textCursorDrawable="@drawable/text_cursor_bg"
                    android:textSize="16sp" />

            </com.zhy.autolayout.AutoRelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line" />

            <com.zhy.autolayout.AutoRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="6dp">

                <EditText
                    android:id="@+id/code"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@+id/obtain_code"
                    android:background="@null"
                    android:gravity="center_vertical|left"
                    android:hint="@string/code_hint"
                    android:paddingLeft="6dp"
                    android:textColor="@color/text"
                    android:textColorHint="@color/text_gray"
                    android:textCursorDrawable="@drawable/text_cursor_bg"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/obtain_code"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/button_my_phone_register"
                    android:clickable="true"
                    android:gravity="center"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:text="@string/obtain_code"
                    android:textColor="@color/white" />

            </com.zhy.autolayout.AutoRelativeLayout>


        </com.zhy.autolayout.AutoLinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/background_login_with_frame"
            android:orientation="vertical">

            <com.zhy.autolayout.AutoRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="6dp"
                android:paddingRight="15dp">


                <EditText
                    android:id="@+id/pass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@+id/toggle_password"
                    android:background="@null"
                    android:gravity="center_vertical|left"
                    android:hint="@string/set_pass"
                    android:inputType="textPassword"
                    android:paddingLeft="6dp"
                    android:textColor="@color/text"
                    android:textColorHint="@color/text_gray"
                    android:textCursorDrawable="@drawable/text_cursor_bg"
                    android:textSize="16sp" />

                <ToggleButton
                    android:id="@+id/toggle_password"
                    android:layout_width="25dp"
                    android:layout_height="15dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/toggle_button_my_login"
                    android:button="@null"
                    android:checked="false"
                    android:text=""
                    android:textOff=""
                    android:textOn=""
                    android:textSize="16sp" />

            </com.zhy.autolayout.AutoRelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line" />

            <com.zhy.autolayout.AutoRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="6dp"
                android:paddingRight="15dp">


                <EditText
                    android:id="@+id/repeate_pass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@+id/toggle_password_again"
                    android:background="@null"
                    android:gravity="center_vertical|left"
                    android:hint="请再输入一遍"
                    android:inputType="textPassword"
                    android:paddingLeft="6dp"
                    android:textColor="@color/text"
                    android:textColorHint="@color/text_gray"
                    android:textCursorDrawable="@drawable/text_cursor_bg"
                    android:textSize="16sp" />

                <ToggleButton
                    android:id="@+id/toggle_password_again"
                    android:layout_width="25dp"
                    android:layout_height="15dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/toggle_button_my_login"
                    android:button="@null"
                    android:checked="false"
                    android:text=""
                    android:textOff=""
                    android:textOn="" />

            </com.zhy.autolayout.AutoRelativeLayout>

        </com.zhy.autolayout.AutoLinearLayout>

        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="47dp">

            <CheckBox
                android:id="@+id/sure_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:background="@drawable/checkbox_agree"
                android:button="@null" />

            <TextView
                android:id="@+id/tv_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/sure_checkbox"
                android:text="@string/agree"
                android:textColor="@color/text_gray" />

            <TextView
                android:id="@+id/tv_register_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/tv_agree"
                android:text="承子商城用户注册协议"
                android:textColor="@color/background_red" />

        </com.zhy.autolayout.AutoRelativeLayout>

        <TextView
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:background="#E6E6E6"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/submit_register"
            android:textColor="#B5B5B5"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:text="@string/register_enjoy_more"
            android:textColor="@color/text_gray" />

    </com.zhy.autolayout.AutoLinearLayout>

</com.zhy.autolayout.AutoLinearLayout>