<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">


        <ImageView
            android:id="@+id/iv_login_back"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="13dp"
            android:src="@mipmap/cha" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="重置密码"
            android:textColor="@color/title_color"
            android:textSize="18sp" />

    </com.zhy.autolayout.AutoRelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line" />

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11.1"
        android:background="@color/background_tint"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/background_login_with_frame"
            android:orientation="vertical"
            android:padding="1dp">

            <com.zhy.autolayout.AutoRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp">

                <EditText
                    android:id="@+id/new_pass_sure"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center_vertical|left"
                    android:hint="@string/new_pass"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:textColor="@color/text"
                    android:textColorHint="@color/text_gray"
                    android:textCursorDrawable="@drawable/text_cursor_bg"
                    android:textSize="16sp" />

            </com.zhy.autolayout.AutoRelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line" />

            <com.zhy.autolayout.AutoRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp">

                <EditText
                    android:id="@+id/new_pass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@+id/obtain_code"
                    android:background="@null"
                    android:gravity="center_vertical|left"
                    android:hint="@string/new_pass_sure"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:textColor="@color/text"
                    android:textColorHint="@color/text_gray"
                    android:textCursorDrawable="@drawable/text_cursor_bg"
                    android:textSize="16sp" />

            </com.zhy.autolayout.AutoRelativeLayout>
        </com.zhy.autolayout.AutoLinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/sure"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:background="#E6E6E6"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sure"
            android:textColor="#B5B5B5"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4.8" />

    </com.zhy.autolayout.AutoLinearLayout>

</com.zhy.autolayout.AutoLinearLayout>